syntax = "proto3";

option java_multiple_files = true;
option java_package = "rg.proto";
option java_outer_classname = "Sample";
option objc_class_prefix = "HLW";

package rg;

service MyService {
  rpc GetVersion (VersionRequest) returns (VersionResponse) {}
}

message VersionRequest {
  string name = 1;
}

message VersionResponse {
  string version = 1;
}